kubernetes/main/apps/home/immich/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immich
      app.kubernetes.io/controller: immich
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
            io.kubernetes.pod.namespace: networking
        - matchLabels:
            app.kubernetes.io/name: immich-proxy
            io.kubernetes.pod.namespace: home
      toPorts:
        - ports:
            - port: "2283"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
            - port: "8082"
              protocol: TCP
    # same-node ClusterIP replies miss CT reverse-xlate (socketLB
    # hostNamespaceOnly + endpointRoutes) and hit ingress policy
    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: postgres-1
            io.kubernetes.pod.namespace: database
        - matchLabels:
            app: immich-dragonfly
            io.kubernetes.pod.namespace: database
        - matchLabels:
            app.kubernetes.io/name: immich
            app.kubernetes.io/controller: machine-learning
            io.kubernetes.pod.namespace: home
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/instance: traefik-networking
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
            cnpg.io/cluster: postgres-1
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
            app: immich-dragonfly
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: home
            app.kubernetes.io/name: immich
            app.kubernetes.io/controller: machine-learning
      toPorts:
        - ports:
            - port: "3003"
              protocol: TCP
    # geodata + map tile fetch on startup
    - toEntities: ["world"]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-machine-learning
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: immich
      app.kubernetes.io/controller: machine-learning
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: immich
            app.kubernetes.io/controller: immich
            io.kubernetes.pod.namespace: home
      toPorts:
        - ports:
            - port: "3003"
              protocol: TCP
  egress:
    # model downloads
    - toEntities: ["world"]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
